--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@midwayjs/logger": "^3.1.0",
     "@midwayjs/typeorm": "^3.20.4",
     "@midwayjs/validate": "^3.12.0",
+    "bcrypt": "^6.0.0",
     "mysql2": "^3.14.2",
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@midwayjs/mock": "^3.12.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/jest": "^29.2.0",
     "@types/node": "14",
     "cross-env": "^6.0.0",
@@ -23,6 +25,8 @@
     "mwts": "^1.3.0",
     "mwtsc": "^1.4.0",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.2",
+    "typeorm-ts-node-commonjs": "^0.3.20",
     "typescript": "~4.8.0"
   },
   "engines": {
@@ -36,7 +40,9 @@
     "lint": "mwts check",
     "lint:fix": "mwts fix",
     "ci": "npm run cov",
-    "build": "mwtsc --cleanOutDir"
+    "build": "mwtsc --cleanOutDir",
+    "typeorm:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate ./src/migration/init -d ./src/data-source.ts",
+    "typeorm:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/data-source.ts"
   },
   "repository": {
     "type": "git",
