--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@midwayjs/bootstrap": "^3.12.0",
     "@midwayjs/core": "^3.12.0",
     "@midwayjs/info": "^3.12.0",
+    "@midwayjs/jwt": "^3.20.9",
     "@midwayjs/koa": "^3.12.0",
     "@midwayjs/logger": "^3.1.0",
     "@midwayjs/typeorm": "^3.20.4",
     "@midwayjs/validate": "^3.12.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
     "typeorm": "^0.3.25"
   },
