feat: 为了进行单文件构建，修改了相关内容

--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
     "@midwayjs/jwt": "^3.20.9",
     "@midwayjs/koa": "^3.12.0",
     "@midwayjs/logger": "^3.1.0",
+    "@midwayjs/static-file": "^3.20.10",
     "@midwayjs/typeorm": "^3.20.4",
     "@midwayjs/validate": "^3.12.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
+    "@midwayjs/bundle-helper": "^1.3.0",
     "@midwayjs/mock": "^3.12.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "^29.2.0",
     "@types/node": "14",
-    "cross-env": "^6.0.0",
+    "@vercel/ncc": "^0.38.3",
+    "cross-env": "^6.0.3",
     "jest": "^29.2.2",
     "mwts": "^1.3.0",
     "mwtsc": "^1.4.0",
@@ -37,14 +40,14 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production node ./bootstrap.js",
-    "dev": "cross-env NODE_ENV=local mwtsc --watch --run @midwayjs/mock/app.js",
-    "test": "cross-env NODE_ENV=unittest jest",
-    "cov": "jest --coverage",
-    "lint": "mwts check",
-    "lint:fix": "mwts fix",
-    "ci": "npm run cov",
-    "build": "mwtsc --cleanOutDir",
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "dev": "NODE_ENV=local midway-bin dev --ts",
+    "test": "midway-bin test --ts",
+    "cov": "midway-bin test --ts --coverage",
+    "lint": "eslint . --ext .ts",
+    "bundle": "bundle && npm run build && ncc build bootstrap.js -o build",
+    "bundle_start": "cross-env NODE_ENV=production node ./build/index.js",
+    "build": "midway-bin build -c",
     "typeorm:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate ./src/migration/init -d ./src/data-source.ts",
     "typeorm:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/data-source.ts"
   },
